--- a/src/components/Styles/Produtos.css
+++ b/src/components/Styles/Produtos.css
@@ -23,10 +23,7 @@
     height: 200px;
   }
   
-  .image_box img {
-    width: 150px;
-    height: 200px;
-  }
+  
   .descricao p:nth-child(1) {
     font-weight: bold;
   }
@@ -42,6 +39,10 @@
     padding: 5px 10px;
     border: none;
     font-weight: bold;
-    background-color: skyblue;
+    background-color: rgb(65, 89, 245);
     outline: none;
+  }
+  .descricao button:hover{
+    color: white;
+    background-color: #000;
   }
