--- a/src/components/Styles/Carrinho.css
+++ b/src/components/Styles/Carrinho.css
@@ -49,7 +49,7 @@
     cursor: pointer;
   }
   .carrinho_box div:nth-child(3) button:hover {
-    background-color: darkseagreen;
+    background-color: rgb(245, 28, 61);
   }
   .carrinho_box div:nth-child(3) span {
     background-color: lightgreen;
